Fixed Background stretching

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
 
 
 body {
+  width: 100vw;
+  height: 100vh;
   background-image: url("/background/bg2.svg");
   background-size: cover;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
